--- a/index.html
+++ b/index.html
@@ -315,8 +315,7 @@
         <br>
         Don't Think Twice, It's All Right (Bob Dylan)
       </div>
-      <div class="videocontainer">
-
+      <div class="videocontainer" style = "padding-right:0">
         <div class = "youtube" style="display:inline-block;text-align:left">
           <iframe class = "youtube" style="border:none" src="https://drive.google.com/file/d/1mxYy8Y9AXIB3wiIi5Da809hjJF_TsBG6/preview" allow="autoplay"></iframe>
         </div>
