messed around a lot with format

--- a/index.html
+++ b/index.html
@@ -141,15 +141,11 @@
       }
 
       .recordings {
-        float:right;width:50%
+        float:left;width:100%
       }
 
       .recordings h2{
-        float:left;margin-left:10%;
-      }
-
-      .recordings iframe{
-        border: 0; width: 90%; height: 50px;float:right
+        float:left;margin-left:0%;
       }
 
       .venues {
@@ -232,10 +228,6 @@
         margin-left:0;
       }
 
-      .recordings iframe{
-        border: 0; width: 100%; height: 50px;float:left
-
-      }
       .venues {
         clear: both;width:100%;float:left;margin-left:0
       }
@@ -277,7 +269,21 @@
       </div>
     </div>
     </div>
-<div style = "width:85%;margin:0 auto;position:relative">
+    </div>
+<div style = "width:90%;margin:0 auto;position:relative">
+  <h2> Recordings </h2>
+  <div style = "width:70%;display:flex;justify-content: left; flex-direction: row;flex-wrap:wrap;gap:30px">
+    <iframe style="border: 0; width: 300px; height: 300px;" src="https://bandcamp.com/EmbeddedPlayer/track=3805461564/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/bottom-of-the-sea">Bottom of the Sea by Dan Peters</a></iframe>    
+    <iframe style="border: 0; width: 300px; height: 300px;" src="https://bandcamp.com/EmbeddedPlayer/track=90879783/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/the-birds-are-louder-in-texas">The Birds Are Louder in Texas by Dan Peters</a></iframe>    
+  </div>
+  <h2> Bio </h2>
+  <div style = "width:70%">
+  <p>
+    Dan Peters is a pianist and singer-songwriter, born and raised in coastal Massachusetts, who joined the Austin music scene in 2020. 
+    He leads a double life as an environmental scientist and a musician, playing piano with several Austin groups including a jazz trio and Nossas Novas, a Brazilian jazz and rock band. 
+    As a songwriter, Dan gravitates towards his folk and rock influences (Big Thief, Wilco, and John Prine to name a few), opting for simpler, memorable melodies with thoughtful lyrics that convey his love for nature and a knack for finding meaning in everyday observations.
+  </p> 
+  </div>
     <div class="bio">
       <h2 class="bio"> Bio </h2>
       <p style="clear: both;margin-top:0"> 
