--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       background-color: #ffffff;
     }
 
+    Figure{
+      padding:0%;
+      margin:0;
+      font-size:12px
+    }
+
     h1,h2{font-family:'Palatino';}
 
     h1{
@@ -48,7 +54,7 @@
       background-color: transparent;
       text-decoration: underline;
     }
-
+    
     #over { font-size:2em; position:relative;}
 
     #slide {
@@ -271,72 +277,51 @@
     </div>
     </div>
 <div style = "width:90%;margin:0 auto;position:relative">
-  <h2> Recordings </h2>
+  <h2> Music </h2>
   <div style = "width:70%;display:flex;justify-content: left; flex-direction: row;flex-wrap:wrap;gap:30px">
     <iframe style="border: 0; width: 300px; height: 300px;" src="https://bandcamp.com/EmbeddedPlayer/track=3805461564/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/bottom-of-the-sea">Bottom of the Sea by Dan Peters</a></iframe>    
     <iframe style="border: 0; width: 300px; height: 300px;" src="https://bandcamp.com/EmbeddedPlayer/track=90879783/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/the-birds-are-louder-in-texas">The Birds Are Louder in Texas by Dan Peters</a></iframe>    
   </div>
+  <h2> Merch (new!) </h2>
+    <div style = "width:70%;display:flex;justify-content: left; flex-direction: row;flex-wrap:wrap;gap:30px">
+      <img src = "img/image.jpeg" style = "width:350px;height=100%">
+    </div>
   <h2> Bio </h2>
-  <div style = "width:70%">
-  <p>
+  <div style = "width:100%">
+  <p style="font-size:17px;line-height:1.4">
     Dan Peters is a pianist and singer-songwriter, born and raised in coastal Massachusetts, who joined the Austin music scene in 2020. 
     He leads a double life as an environmental scientist and a musician, playing piano with several Austin groups including a jazz trio and Nossas Novas, a Brazilian jazz and rock band. 
     As a songwriter, Dan gravitates towards his folk and rock influences (Big Thief, Wilco, and John Prine to name a few), opting for simpler, memorable melodies with thoughtful lyrics that convey his love for nature and a knack for finding meaning in everyday observations.
   </p> 
   </div>
-    <div class="bio">
-      <h2 class="bio"> Bio </h2>
-      <p style="clear: both;margin-top:0"> 
+  <div style = "width:100%;display:flex;justify-content: space-between; flex-direction: row;flex-wrap:wrap;gap:30px">
+    <!-- <figure >
+    <img src="img/75F7ADE1-839B-4A2E-9FFD-41BBD065286C.JPG" height = auto width= 200px>
+    <figcaption>Playing to the ocean (Marblehead, MA)</figcaption> 
+    </figure> 
+  
+    <figure>
+    <img src="img/94E2CD09-D5EA-46EA-9ABA-9C7081167ECB (1).png" height = auto width= 200px>
+    <figcaption>Somewhere near Terlingua, TX</figcaption> 
+    </figure>-->
+    
+    <figure>
+    <img src="img/000015960012.jpg" height = 300px width=auto>
+    <figcaption>Working on the EP at Ramble Creek Studio in Austin, TX </figcaption> 
+    </figure>
+  
+    <figure>
+      <img src="img/DSC07725.jpg" height = 300px width=auto>
+      <figcaption>Performing at Mozart's famous Christmas Lights Show (credit: Willy Zuniga) </figcaption> 
+      </figure>
+  
+      <!--<figure>
+        <img src="img/NossasSagebrush2-5.jpeg" height = auto width=200px>
+        <figcaption>Playing with Nossas Novas at Sagebrush (Austin, TX)<br> credit: Further Creative Studio </figcaption> 
+        </figure>-->
+  </div>
 
-        Dan Peters is a pianist and singer-songwriter based in Austin, Texas. His songs are full of memorable melodies, weaving folk and rock influences together with jazz harmonies. Dan's thought-provoking lyrics explore the wonders of our natural world, and what it means to be a human living within it. 
-
-        <br><br>
-
-        Growing up in coastal Massachusetts, Dan started playing classical piano at a young age. Before long he found his way to jazz, drawn by the creative possibilities of improvisation. Dan continued to build on his musical education, completing a degree in Jazz Studies at Northwestern University in 2019. All the while Dan worked to refine his songwriting craft, composing and performing with several jazz and rock groups.
-
-        <br><br>
-
-        Dan’s two most recent releases embody the artistic voice that he has been developing for years. 
-
-        In "The Birds Are Louder in Texas," a lush indie-folk tune with bluesy saxophone and Fender Rhodes, Dan sings about the unfamiliar birds outside his window after moving across the country. 
-
-        In "Bottom of the Sea," Dan contemplates the mystery of the deep blue and the inner depths of our own minds, accompanied by fluid piano lines that evoke the movement of the ocean.
-
-        Dan can often be found performing songs like these at local Austin venues.
-
-        He is currently working on recording his forthcoming album, <i> The Stuff of Deserts</i>.
-
-      </p>
-    </div>
-    <div class = "recordings">
-      <h2 class = "recordings"> Recordings </h2>
-      <iframe class = "recordings" src="https://bandcamp.com/EmbeddedPlayer/track=90879783/size=small/bgcol=333333/linkcol=4ec5ec/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/the-birds-are-louder-in-texas">The Birds Are Louder in Texas by Dan Peters</a></iframe>
-      <br>
-      <iframe class = "recordings" src="https://bandcamp.com/EmbeddedPlayer/track=3805461564/size=small/bgcol=333333/linkcol=4ec5ec/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/bottom-of-the-sea">Bottom of the Sea by Dan Peters</a></iframe>
-      <h2 class =  "venues" > Selected venues </h2>
-      <div class="venues">
-        <p style = "margin-top:0"> 
-          Mozart’s Coffee Roasters <i>(Austin, TX)</i> <br>
-          Room 43 <i>(Chicago, IL)</i><br>
-          Carnegie Hall <i>(New York, NY)</i><br>
-          Salem Jazz and Soul Festival <i>(Salem, MA)</i><br>
-          Marblehead Festival of Arts <i>(Marblehead, MA)</i><br>
-          Chianti Jazz Club <i>(Beverly, MA)</i><br>
-          Shaolin Liu Performance Center <i>(Rockport, MA)</i><br>
-        </p>
-      </div>
-    </div>
-
-    <div style="clear: both;">
-      <h2 class="left"> Photos </h2>
-    </div>
-    <div style="clear: both;" id="slide">
-      <img style= "padding:20px;padding-left:0;padding-top:0" src="img/75F7ADE1-839B-4A2E-9FFD-41BBD065286C.png" height = 300px width= auto>
-      <img style= "padding:20px;padding-left:0;padding-top:0" src="img/94E2CD09-D5EA-46EA-9ABA-9C7081167ECB.png" height = 300px width= auto>
-      <img style= "padding:20px;padding-left:0;padding-top:0" src="img/IMG_3759.png" height = 300px width=auto>
-      <img style= "padding:20px;padding-left:0;padding-top:0" src="img/IMG_6592.png" height = 300px width=auto>
-    </div>
-    <div style="clear: both;">
+   <!--- <div style="clear: both;">
       <h2 class="left"> Videos </h2>
     </div>
     <div style="clear: both;" id="slide">
@@ -361,18 +346,61 @@
         </div>
         <br>
         Jesus, Etc. (Wilco)
-      </div>
-    <div style="clear: both;">
-      <h2 class="left"> Contact </h2> 
-    </div>
-    <div style="clear: both;float:left;text-align:left">
-      <a style="color:inherit;float:left;" class = "email" href="mailto:danpetersmusic@gmail.com">danpetersmusic@gmail.com<b></a>
-        <div class="icon-bar-horizontal-bottom" style="float:left;bottom:0;width:75%">
-          <a href="https://open.spotify.com/artist/0U7nvp2dvPQ3n4hR45i1s7?si=iLyR5accQnip95h55v3WUQ" class = "spotify"><i class="fa fa-spotify"></i></a>
-          <a href="https://www.instagram.com/danpetersmusic/" class = "instagram opaque" ><i class="fa fa-instagram"></i></a>
-          <a href="mailto:danpetersmusic@gmail.com" class="mail opaque"><i class="fa fa-envelope-square" ></i></a>
+      </div> -->
+      <h2> Contact </h2> 
+    <div >
+      Say hey:
+      <a  class = "email" href="mailto:danpetersmusic@gmail.com">danpetersmusic@gmail.com</a>
+<br><br>
+
+Mailing list signup: <div id="mc_embed_signup" style="width:500px; clear: left;" >
+  <form style = "margin:0" action="https://danpetersmusic.us7.list-manage.com/subscribe/post?u=4d5e741a96830c7b866649957&amp;id=c4f2df0bda&amp;f_id=0018c7e4f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div id="mc_embed_signup_scroll">
+      <div class="mc-field-group">
+<input type="email" value="[your email address]" name="EMAIL" class="required email" id="mce-EMAIL" required>
+<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+</div>
+<div hidden="true"><input type="hidden" name="tags" value="7739323"></div>
+	<div id="mce-responses" class="clear foot">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4d5e741a96830c7b866649957_c4f2df0bda" tabindex="-1" value=""></div>
+        <div class="optionalParent">
+            <div class="clear foot">
+                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+            </div>
         </div>
     </div>
+</form>
+
+<!-- Begin Mailchimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
+<div id="mc_embed_signup" style="width:500px; clear: left;" >
+    <form style = "margin:0" action="https://danpetersmusic.us7.list-manage.com/subscribe/post?u=4d5e741a96830c7b866649957&amp;id=c4f2df0bda&amp;f_id=0018c7e4f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+        <div class="mc-field-group">
+	<label for="mce-EMAIL">Or subscribe to get updates on music, merch, and more! </label>
+	<input type="email" value="[your email address]" name="EMAIL" class="required email" id="mce-EMAIL" required>
+	<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+</div>
+<div hidden="true"><input type="hidden" name="tags" value="7739323"></div>
+	<div id="mce-responses" class="clear foot">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4d5e741a96830c7b866649957_c4f2df0bda" tabindex="-1" value=""></div>
+        <div class="optionalParent">
+            <div class="clear foot">
+                <input style = "" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+            </div>
+        </div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+      </div>
   </div>
   </div>
 </div>
