--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
       Say hey:
       <a  class = "email" href="mailto:danpetersmusic@gmail.com">danpetersmusic@gmail.com</a>
 <br><br>
-
+<!-- 
 Mailing list signup: <div id="mc_embed_signup" style="width:500px; clear: left;" >
   <form style = "margin:0" action="https://danpetersmusic.us7.list-manage.com/subscribe/post?u=4d5e741a96830c7b866649957&amp;id=c4f2df0bda&amp;f_id=0018c7e4f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
       <div id="mc_embed_signup_scroll">
@@ -364,18 +364,18 @@ Mailing list signup: <div id="mc_embed_signup" style="width:500px; clear: left;"
 	<div id="mce-responses" class="clear foot">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4d5e741a96830c7b866649957_c4f2df0bda" tabindex="-1" value=""></div>
+	</div> -->   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+  <!--  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4d5e741a96830c7b866649957_c4f2df0bda" tabindex="-1" value=""></div>
         <div class="optionalParent">
             <div class="clear foot">
                 <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
             </div>
         </div>
     </div>
-</form>
+</form>-->
 
 <!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
+<!--<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
 <div id="mc_embed_signup" style="width:500px; clear: left;" >
     <form style = "margin:0" action="https://danpetersmusic.us7.list-manage.com/subscribe/post?u=4d5e741a96830c7b866649957&amp;id=c4f2df0bda&amp;f_id=0018c7e4f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
@@ -388,8 +388,8 @@ Mailing list signup: <div id="mc_embed_signup" style="width:500px; clear: left;"
 	<div id="mce-responses" class="clear foot">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4d5e741a96830c7b866649957_c4f2df0bda" tabindex="-1" value=""></div>
+	</div> -->   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+   <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4d5e741a96830c7b866649957_c4f2df0bda" tabindex="-1" value=""></div>
         <div class="optionalParent">
             <div class="clear foot">
                 <input style = "" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
@@ -399,7 +399,7 @@ Mailing list signup: <div id="mc_embed_signup" style="width:500px; clear: left;"
 </form>
 </div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-<!--End mc_embed_signup-->
+--><!--End mc_embed_signup-->
       </div>
   </div>
   </div>
