--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     <iframe style="border: 0; width: 300px; height: 300px;" src="https://bandcamp.com/EmbeddedPlayer/track=3805461564/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/bottom-of-the-sea">Bottom of the Sea by Dan Peters</a></iframe>    
     <iframe style="border: 0; width: 300px; height: 300px;" src="https://bandcamp.com/EmbeddedPlayer/track=90879783/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/the-birds-are-louder-in-texas">The Birds Are Louder in Texas by Dan Peters</a></iframe>    
   </div>
-  <h2> Merch (new!) </h2>
+  <h2> Merch (coming soon!) </h2>
     <div style = "width:70%;display:flex;justify-content: left; flex-direction: row;flex-wrap:wrap;gap:30px">
       <img src = "img/image.jpeg" style = "width:350px;height=100%">
     </div>
