--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@
         
         <h2> Videos </h2>
         <figure>
+          <div class = "videowrapper" >
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/eUxRNQZGd7Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+          <figcaption style="padding-top:8px"> Performing upcoming single Jenny Lake at Half Step </figcaption>
+        </figure>
+        <figure>
         <div class = "videowrapper" >
         <iframe width="560" height="315" src="https://www.youtube.com/embed/zx0Zbxt7zzQ?start=4432" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
