--- a/index.html
+++ b/index.html
@@ -211,9 +211,11 @@
           <iframe style="border: 0; width: 250px; height: 250px;" src="https://bandcamp.com/EmbeddedPlayer/track=3805461564/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/bottom-of-the-sea">Bottom of the Sea by Dan Peters</a></iframe>    
           <iframe style="border: 0; width: 250px; height: 250px;" src="https://bandcamp.com/EmbeddedPlayer/track=90879783/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/the-birds-are-louder-in-texas">The Birds Are Louder in Texas by Dan Peters</a></iframe>    
         </div>
-        <h2> Merch (coming soon!) </h2>
+        <h2> Merch - now on Bandcamp! </h2>
         <div class = building_block >
-        <img src = "img/image.jpeg" style = "width:300px;height:100%">
+        <a href = "https://dan-peters-music.bandcamp.com/merch">
+        <img src = "img/Screenshot 2023-03-29 at 6.00.27 PM.png"  style = "width:90%;height:auto">
+        </a>
         </div>
         <h2> Latest on Instagram </h2> 
         <div class = building_block >
