--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
       <div class = col_1 style = "flex:65%"> 
         <h2> Music </h2>
         <div class = building_block >
+          <iframe style="border: 0; width: 250px; height: 250px;" src="https://bandcamp.com/EmbeddedPlayer/album=2918808344/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/track=1861561888/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/album/ocean-and-the-wind">Ocean and the Wind by Dan Peters</a></iframe>
           <iframe style="border: 0; width: 250px; height: 250px;" src="https://bandcamp.com/EmbeddedPlayer/track=3805461564/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/bottom-of-the-sea">Bottom of the Sea by Dan Peters</a></iframe>    
           <iframe style="border: 0; width: 250px; height: 250px;" src="https://bandcamp.com/EmbeddedPlayer/track=90879783/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/the-birds-are-louder-in-texas">The Birds Are Louder in Texas by Dan Peters</a></iframe>    
         </div>
