--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <!-- begin email subscribe bar-->
       <div style = "position:relative;flex:100%;align-items:center;padding:0;margin:0">
         <br>
-        <a href="https://mailchi.mp/fe28deb0eec2/email-signup" class="button" style = "display:flex;align-items:center;justify-content:center;width:100%;padding-top:0;max-height:50px"> 
+        <a href="https://danpetersmusic.substack.com/?r=378pvp&utm_campaign=pub-share-checklist" class="button" style = "display:flex;align-items:center;justify-content:center;width:100%;padding-top:0;max-height:50px"> 
           <img src="img/android-chrome-512x512.png" width = "30px" style = "flex-basis:5%;padding-right:10px" height ="auto" alt="">
           Subscribe for email updates
         </a>
