--- a/new.html
+++ b/new.html
@@ -177,8 +177,10 @@
                 <div class="menu-flex">
                 <a href="about.html" class="menu-item">about</a>
                 <a href="music.html" class="menu-item">music</a>
+                <a href="https://danpetersmusic.substack.com" class="menu-item"
+                target="_blank" rel="noopener noreferrer" 
+                title="updates ↗" style="color:orange">updates ⤴</a>
                 <a href="events.html" class="menu-item">events</a>
-                <a href="news.html" class="menu-item">news</a>
                 <a href="contact.html" class="menu-item">contact</a>
                 </div>
             </div>
