--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 
         .menu-container {
             height: auto;
-            width: 65%;
+            width: 75%;
             margin: 0 auto;
             padding-top: 10px;
         }
@@ -207,16 +207,18 @@
                 <div class="menu-container">
                     <div class="menu-flex">
                     <a href="about.html" class="menu-item">about</a>
-                    <a href="music.html" class="menu-item">music</a>
-                    <a href="events.html" class="menu-item">events</a>
-                    <a href="news.html" class="menu-item">news</a>
-                    <a href="contact.html" class="menu-item">contact</a>
+                <a href="music.html" class="menu-item">music</a>
+                <a href="https://danpetersmusic.substack.com" class="menu-item"
+                target="_blank" rel="noopener noreferrer" 
+                title="updates ↗" style="color:orange">updates ⤴</a>
+                <a href="events.html" class="menu-item">events</a>
+                <a href="contact.html" class="menu-item">contact</a>
                     </div>
                 </div>
             </div>
         </div>
         <hr>
-        <div class = "mobiletitle"><h1 class = "title"> Dan Peters</h1></div>
+        <div class = "mobiletitle"><h1 class = "title"> <a href="new.html">Dan Peters</a></h1></div>
         <h1 class="sectiontitle" >about</h1>
         <br>
         <div class="content">
