--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 
         .menu-container {
             height: auto;
-            width: 65%;
+            width: 75%;
             margin: 0 auto;
             padding-top: 10px;
         }
@@ -123,6 +123,10 @@
             margin-bottom:5px;
         }
 
+        .mobiletitle{
+            display:none;
+        }
+
         .subtitle {
             font-size: 1rem;
             color: #ffffff;
@@ -139,6 +143,14 @@
             vertical-align: middle;
         }
 
+        .sectiontitle {
+            font-size: 2rem;
+            font-weight: bold;
+            color: #ffffff;
+            letter-spacing: 2px;
+            margin-bottom:5px;
+            margin-top:10px;
+        }
 
         @media (max-width: 768px) {
             .container {
@@ -149,27 +161,40 @@
             .left {
                 width: 100%;
                 height: 40vh;
+                display:none;
             }
 
             .right {
                 width: 100%;
-                padding: 40px 20px;
             }
 
             .title {
                 font-size: 2.5rem;
+                margin-top:10px;
             }
 
             .menu-container {
                 height: auto;
                 display: flex;
-                flex-direction: column;
-                gap: 20px;
+                flex-direction: row;
+                justify-content: space-evenly;
+                width: 100%;
             }
 
             .menu-item {
                 position: static;
                 text-align: center;
+            }
+            
+            .mobiletitle{
+                display:flex
+            }
+
+            .sectiontitle {
+            font-size: 1.5rem;
+            }
+            .content{
+                width:80%;
             }
         }
     </style>
@@ -189,17 +214,19 @@
                 <div class="menu-container">
                     <div class="menu-flex">
                     <a href="about.html" class="menu-item">about</a>
-                    <a href="music.html" class="menu-item">music</a>
-                    <a href="events.html" class="menu-item">events</a>
-                    <a href="news.html" class="menu-item">news</a>
-                    <a href="contact.html" class="menu-item">contact</a>
+                <a href="music.html" class="menu-item">music</a>
+                <a href="https://danpetersmusic.substack.com" class="menu-item"
+                target="_blank" rel="noopener noreferrer" 
+                title="updates ↗" style="color:orange">updates ⤴</a>
+                <a href="events.html" class="menu-item">events</a>
+                <a href="contact.html" class="menu-item">contact</a>
                     </div>
                 </div>
             </div>
         </div>
         <hr>
-        <br><br>
-        <h1 class="title" >contact</h1>
+        <div class = "mobiletitle"><h1 class = "title"> <a href="new.html">Dan Peters</a></h1></div>
+        <h1 class="sectiontitle" >contact</h1>
         <br>
         <div class="content">
             <p> For bookings and other inquiries, please reach out to <a href="danpetersmusic@gmail.com">danpetersmusic@gmail.com</a>.</p>
