--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 
         .menu-item {
             cursor: pointer;
-            padding: 12px 20px;
+            padding: 6px 10px;
             border-radius: 8px; 
             border: 1px solid transparent; 
             transition: all 0.3s ease;
@@ -177,6 +177,7 @@
             .menu-item {
                 position: static;
                 text-align: center;
+                font-size:16px;
             }
             
             .mobiletitle{
@@ -188,6 +189,7 @@
             }
             .content{
                 width:80%;
+                font-size:16px;
             }
         }
     </style>
@@ -223,7 +225,7 @@
         <br>
         <div class="content">
             <p>
-            Dan Peters was born and raised in coastal Massachusetts. He moved to Austin in 2020 to pursue dual passions as a musician and an environmental scientist. Formally trained in jazz piano, he plays keys with several Austin groups including Nossas Novas, a Brazilian bossa nova and tropicalia band. As a songwriter, Dan gravitates towards his folk and Americana influences (Wilco, John Prine, and Big Thief to name a few), weaving memorable melodies with thoughtful lyrics that convey a knack for finding meaning in everyday observations. Dan’s 2023 Ocean and the Wind EP is a fitting debut showcasing Dan’s ability to tell emotional stories full of natural imagery.
+            Dan Peters was born and raised in coastal Massachusetts. He moved to Austin in 2020 to pursue dual passions as a musician and an environmental scientist. Formally trained in jazz piano, he plays keys with several Austin groups including Nossas Novas, a Brazilian bossa nova and tropicalia band. <br><br>As a songwriter, Dan gravitates towards his folk and Americana influences (Wilco, John Prine, and Big Thief to name a few), weaving memorable melodies with thoughtful lyrics that convey a knack for finding meaning in everyday observations. Dan’s 2023 Ocean and the Wind EP is a fitting debut showcasing Dan’s ability to tell emotional stories full of natural imagery.
             </p>
             <br>
             <img style= "width:100%; height:auto;margin:0 auto" src="img/000015960012.png">
