--- a/music.html
+++ b/music.html
@@ -92,7 +92,7 @@
 
         .menu-item {
             cursor: pointer;
-            padding: 12px 20px;
+            padding: 6px 10px;
             border-radius: 8px; 
             border: 1px solid transparent; 
             transition: all 0.3s ease;
@@ -151,6 +151,10 @@
                 overflow-y: auto;
             }
 
+            .iframe{
+                width:500px;
+            }
+
             .left {
                 width: 100%;
                 height: 40vh;
@@ -177,6 +181,7 @@
             .menu-item {
                 position: static;
                 text-align: center;
+                font-size:16px;
             }
             
             .mobiletitle{
@@ -187,7 +192,9 @@
             font-size: 1.5rem;
             }
             .content{
-                width:80%;
+                width:100%;
+                font-size:16px;
+
             }
         }
     </style>
@@ -224,13 +231,13 @@
         <div class="content">
             <p> One way to support my work is to listen or purchase my music from <a href="https://dan-peters-music.bandcamp.com">Bandcamp</a> (shown below). You can also find me on <a href="https://open.spotify.com/artist/0U7nvp2dvPQ3n4hR45i1s7">Spotify</a>, <a href="https://music.apple.com/us/artist/dan-peters/1541560954">Apple Music</a>, and other streaming services.</p>
             <br>
-            <iframe style="border: 0; width: 500px; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=4175068505/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/live-oak-slow-your-roll">Live Oak (Slow Your Roll) by Dan Peters</a></iframe>
+            <iframe style="border: 0; width:350px;height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=4175068505/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/live-oak-slow-your-roll">Live Oak (Slow Your Roll) by Dan Peters</a></iframe>
             <br>
-            <iframe style="border: 0; width: 500px; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=2918808344/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/album/ocean-and-the-wind">Ocean and the Wind by Dan Peters</a></iframe>
+            <iframe style="border: 0; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=2918808344/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/album/ocean-and-the-wind">Ocean and the Wind by Dan Peters</a></iframe>
             <br>
-            <iframe style="border: 0; width: 500px; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=3805461564/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/bottom-of-the-sea">Bottom of the Sea by Dan Peters</a></iframe> 
+            <iframe style="border: 0; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=3805461564/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/bottom-of-the-sea">Bottom of the Sea by Dan Peters</a></iframe> 
             <br>
-            <iframe style="border: 0; width: 500px; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=90879783/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/the-birds-are-louder-in-texas">The Birds Are Louder in Texas by Dan Peters</a></iframe>
+            <iframe style="border: 0; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=90879783/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://dan-peters-music.bandcamp.com/track/the-birds-are-louder-in-texas">The Birds Are Louder in Texas by Dan Peters</a></iframe>
         </div>
 </body>
 
